# Assignments

./: .gitignore  Ex1.hs  HR_Lab4.hs  HR_Lab5.cpp  HR_Lab5_Practice.hs  HR_Lab5_Practice.py  HR_Lab6.hs  HR_Lab6_Practice.java  HR_Lab7.hs  HR_Lab7_Practice.hs  HR_Lab8.java  HR_Lab8_Practice.java  HR_Lab9.hs  HR_Lab9_Practice.hs  NoPrelude.hs  README.md
CS210/: HR_Lab10.hs  HR_Lab10_Practice.hs  HR_Lab11_Practice.hs  HR_Lab4.hs  HR_Lab4.java  HR_Lab4.py  HR_Lab5.java  HR_Lab5.py  HR_Lab5_Practice.hs  HR_Lab5_Practice.py  HR_Lab6.java  HR_Lab6.py  HR_Lab7.hs  HR_Lab7.py  HR_Lab7_Practice.java  HR_Lab8.java  HR_Lab8_Practice.java  HR_Lab9.hs  HR_Lab9.py  HR_Lab9_Practice.cpp  HR_Lab9_Practice.java  HR_Lab9_Practice.py
CS210_Revision/src/: Revision_03.java  Revision_04.java  Revision_05.java  Revision_06.java  Revision_08.rs  Revision_09.c  Revision_11.c  Revision_13.rs  Revision_14.rs  Revision_16.rs  Revision_17.cs  Revision_17.rs  Revision_18.c  Revision_19.hs  (+5 more)
CS211/: Tree.hs  TreeStructures.md  graph.py  tree.cpp  tree.py  tree.rs
CS211/lab03-hs/: lab03-hs.cabal
CS211/lab03-hs/.stack-work/install/x86_64-linux/lts-5.4/7.10.3/flag-cache/: lab03-hs-0.1.0.0-2838b9a9d16021c0b6eb2d77b98e6938
CS211/lab03-hs/.stack-work/install/x86_64-linux/lts-5.4/7.10.3/lib/x86_64-linux-ghc-7.10.3/lab03-hs-0.1.0.0-LxWpBJoQrWILTvGDyRvwMi/: Lib.dyn_hi
CS211/lab03-hs/.stack-work/install/x86_64-linux/lts-5.4/7.10.3/pkgdb/: lab03-hs-0.1.0.0-2838b9a9d16021c0b6eb2d77b98e6938.conf  package.cache
CS211/lab03-hs/app/: Main.hs
CS225/: NoPrelude.hs
CS255/: Ex1.hs  NoPrelude.hs
(+42 files in other folders)
